--- a/printer.html
+++ b/printer.html
@@ -13,7 +13,7 @@
     <input type="file" id="fileInput" />
     <button onclick="testPrint()">Test Print</button>
 
-    <script src="printer-sdk.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/chicken-afk/sdk-printer@latest/printer-sdk.js"></script>
     <script>
         const sdk = new PrinterSDK();
 
